指摘内容修正

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
             {{ form_start(form) }}
             {{ form_label(form.name) }}
             {{ form_widget(form.name) }}
-            <button type="submit">登録</button>
+            <button type="submit" name="submit">登録</button>
             {{ form_end(form) }}
         {% endblock %}
     </body>
