必要な全機能の実装

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -18,6 +18,6 @@
     
     
     <p>{{Message}}</p>
-    <p>あなたの持ちポイント：{{currentPoint.getPoint()}}</p>
+    <p>あなたの持ちポイント：{{currentPoint}}</p>
 </body>
 </html>
