テストコードを追加し、テスト用にリファクタリング

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -5,9 +5,10 @@
     <title>Main</title>
 </head>
 <body>
+    <a href="/logout">ログアウト</a>
     <p>本日CPUが選んだ手の割合</p>
     <p>グー：{{goo}}％　チョキ：{{choki}}％　パー：{{par}}％</p>
-    <form action="/main" method="post">
+    <form action="/main/{{Hand}}" method="post">
     <input type="radio" name="hand" value="0">グー</input>
     <input type="radio" name="hand" value="1">チョキ</input>
     <input type="radio" name="hand" value="2">パー</input>
