テスト用にリファクタリングし、不要な機能を削除

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,7 +8,7 @@
     <a href="/logout">ログアウト</a>
     <p>本日CPUが選んだ手の割合</p>
     <p>グー：{{goo}}％　チョキ：{{choki}}％　パー：{{par}}％</p>
-    <form action="/main/{{cpu}}" method="post">
+    <form action="/main" method="post">
     <input type="radio" name="hand" value="0">グー</input>
     <input type="radio" name="hand" value="1">チョキ</input>
     <input type="radio" name="hand" value="2">パー</input>
